--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -70,7 +70,7 @@
       <PrecompiledHeaderFile>core\stdafx.h</PrecompiledHeaderFile>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <AdditionalIncludeDirectories>$(SolutionDir)r5dev\;$(SolutionDir)r5dev\thirdparty\recast\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)r5dev\;$(SolutionDir)r5dev\thirdparty\;$(SolutionDir)r5dev\thirdparty\recast\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -104,7 +104,7 @@
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <OmitFramePointers>false</OmitFramePointers>
-      <AdditionalIncludeDirectories>$(SolutionDir)r5dev\;$(SolutionDir)r5dev\thirdparty\recast\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)r5dev\;$(SolutionDir)r5dev\thirdparty\;$(SolutionDir)r5dev\thirdparty\recast\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -334,6 +334,7 @@
     <ClInclude Include="..\thirdparty\lzham\lzhamdecomp\lzham_lzdecompbase.h" />
     <ClInclude Include="..\thirdparty\nlohmann\adl_serializer.hpp" />
     <ClInclude Include="..\thirdparty\nlohmann\byte_container_with_subtype.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\abi_macros.hpp" />
     <ClInclude Include="..\thirdparty\nlohmann\detail\conversions\from_json.hpp" />
     <ClInclude Include="..\thirdparty\nlohmann\detail\conversions\to_chars.hpp" />
     <ClInclude Include="..\thirdparty\nlohmann\detail\conversions\to_json.hpp" />
@@ -361,6 +362,7 @@
     <ClInclude Include="..\thirdparty\nlohmann\detail\meta\detected.hpp" />
     <ClInclude Include="..\thirdparty\nlohmann\detail\meta\identity_tag.hpp" />
     <ClInclude Include="..\thirdparty\nlohmann\detail\meta\is_sax.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\meta\std_fs.hpp" />
     <ClInclude Include="..\thirdparty\nlohmann\detail\meta\type_traits.hpp" />
     <ClInclude Include="..\thirdparty\nlohmann\detail\meta\void_t.hpp" />
     <ClInclude Include="..\thirdparty\nlohmann\detail\output\binary_writer.hpp" />
