--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -2177,6 +2177,12 @@
     <ClInclude Include="..\thirdparty\nlohmann\thirdparty\hedley\hedley_undef.hpp">
       <Filter>thirdparty\nlohmann\thirdparty\hedley</Filter>
     </ClInclude>
+    <ClInclude Include="..\thirdparty\nlohmann\detail\meta\std_fs.hpp">
+      <Filter>thirdparty\nlohmann\detail\meta</Filter>
+    </ClInclude>
+    <ClInclude Include="..\thirdparty\nlohmann\detail\abi_macros.hpp">
+      <Filter>thirdparty\nlohmann\detail</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\shared\resource\lockedserver.png">
