Add reversed 'CNetKey' class
Confirmed size, mostly unknown still. But some of this seems to be data related to OpenSSL.

--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="..\tier1\generichash.cpp" />
     <ClCompile Include="..\tier1\IConVar.cpp" />
     <ClCompile Include="..\tier1\NetAdr.cpp" />
+    <ClCompile Include="..\tier1\NetKey.cpp" />
     <ClCompile Include="..\tier1\splitstring.cpp" />
     <ClCompile Include="..\tier1\strtools.cpp" />
     <ClCompile Include="..\tier1\utlbuffer.cpp" />
@@ -578,6 +579,7 @@
     <ClInclude Include="..\tier1\IConVar.h" />
     <ClInclude Include="..\tier1\mempool.h" />
     <ClInclude Include="..\tier1\NetAdr.h" />
+    <ClInclude Include="..\tier1\NetKey.h" />
     <ClInclude Include="..\tier1\strtools.h" />
     <ClInclude Include="..\tier1\utlblockmemory.h" />
     <ClInclude Include="..\tier1\utlbuffer.h" />
