--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -687,6 +687,9 @@
     <ClCompile Include="..\tier1\NetKey.cpp">
       <Filter>sdk\tier1</Filter>
     </ClCompile>
+    <ClCompile Include="..\tier1\utlstring.cpp">
+      <Filter>sdk\tier1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -2016,6 +2019,9 @@
       <Filter>thirdparty\nlohmann\detail\meta</Filter>
     </ClInclude>
     <ClInclude Include="..\tier1\NetKey.h">
+      <Filter>sdk\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\tier1\utlstring.h">
       <Filter>sdk\tier1</Filter>
     </ClInclude>
   </ItemGroup>
