--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -1398,6 +1398,9 @@
     <ClInclude Include="..\tier1\NetKey.h">
       <Filter>sdk\tier1</Filter>
     </ClInclude>
+    <ClInclude Include="..\tier1\utlstring.h">
+      <Filter>sdk\tier1</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
@@ -1785,6 +1788,9 @@
       <Filter>sdk\vstdlib</Filter>
     </ClCompile>
     <ClCompile Include="..\tier1\NetKey.cpp">
+      <Filter>sdk\tier1</Filter>
+    </ClCompile>
+    <ClCompile Include="..\tier1\utlstring.cpp">
       <Filter>sdk\tier1</Filter>
     </ClCompile>
   </ItemGroup>
