--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -753,6 +753,9 @@
     <ClCompile Include="..\tier1\NetKey.cpp">
       <Filter>sdk\tier1</Filter>
     </ClCompile>
+    <ClCompile Include="..\tier1\utlstring.cpp">
+      <Filter>sdk\tier1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -2187,6 +2190,9 @@
       <Filter>thirdparty\nlohmann\detail</Filter>
     </ClInclude>
     <ClInclude Include="..\tier1\NetKey.h">
+      <Filter>sdk\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\tier1\utlstring.h">
       <Filter>sdk\tier1</Filter>
     </ClInclude>
   </ItemGroup>
